Minor tweaks and bug fixes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<!-- Controls -->
 	<div class="controls">
 		<div class="dropdown">
-			<button class="dropbtn">Please select a year</button>
+			<button class="dropbtn">Year: 2017</button>
 				<div class="dropdown-content">
-					<a id="btn_2017" href='javascript:void();'>2017</a>
-					<a id="btn_2016" href='javascript:void();'>2016</a>
-					<a id="btn_2015" href='javascript:void();'>2015</a>
+					<a id="btn_2017" href='javascript:void(0);'>2017</a>
+					<a id="btn_2016" href='javascript:void(0);'>2016</a>
+					<a id="btn_2015" href='javascript:void(0);'>2015</a>
 				</div>
 		</div>
 		<div class=button-group>
