Added screenshot to readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
 	<!-- Title across the entire container -->
 	<div class="text-centered">
-		<h1 class="title">Household waste in Scotland Choropleth Map</h1>
+		<h1 class="title">Household waste in Scotland</h1>
 		<p class="subtitle">Mobile-friendly demonstrator dashboard built using D3.js with data delivered via Flask API</p>
 	</div>
 	<!-- Controls -->
